# bitflip

./: .env.example  .envrc  .gitignore  Anchor.toml  Cargo.toml  Makefile.toml  deno.jsonc  devenv.nix  devenv.yaml  dprint.json  leptosfmt.toml  notes.md  readme.md  rust-toolchain.toml
bitflip/: Cargo.toml  README.md  tailwind.config.js
bitflip/public/: doodle.css
bitflip/src/: app.rs  db.rs  encryption.rs  environment.rs  functions.rs  hooks.rs  image_generator.rs  lib.rs  main.rs  shared.rs  state.rs  stores.rs  wallet.rs
bitflip/src/components/: game_header.rs  game_info_bar.rs  game_select.rs  mod.rs  section_buttons.rs  section_canvas.rs
bitflip/src/snapshots/: bitflip__db__tests__encrypted_keypairs_table_snapshot.snap  bitflip__db__tests__games_table_snapshot.snap  bitflip__db__tests__players_table_snapshot.snap  bitflip__db__tests__section_events_table_snapshot.snap  bitflip__db__tests__sections_table_snapshot.snap
bitflip/style/: input.css  output.css
bitflip_client/: Cargo.toml
bitflip_client/src/: client.rs  lib.rs  macros.rs  pda.rs
bitflip_client/tests/: banks_client.rs  compute_units.rs  shared.rs  test_validator.rs
bitflip_client/tests/snapshots/: banks_client__initialize_bits_meta.snap  banks_client__initialize_config_test.snap  banks_client__initialize_token-2.snap  banks_client__initialize_token.snap  banks_client__set_bits_on-2.snap  banks_client__set_bits_on-3.snap  banks_client__set_bits_on.snap  banks_client__start_bits_section.snap  compute_units__initialize_config_test.snap  test_validator__initialize_bits_meta.snap  test_validator__initialize_config_test.snap  test_validator__initialize_token-2.snap  test_validator__initialize_token.snap
bitflip_legacy_client/: Cargo.toml
bitflip_legacy_client/src/: client.rs  pda.rs
bitflip_legacy_client/tests/: banks_client.rs  shared.rs  test_validator.rs
bitflip_program/: Cargo.toml  compute_units.json  program_hash.txt
bitflip_program/src/: client.rs  constants.rs  cpi.rs  errors.rs  events.rs  idls.rs  instructions.rs  lib.rs  loaders.rs  pda.rs  state.rs  types.rs  utils.rs
bitflip_program/src/processor/: config_initialize.rs  config_update_authority.rs  event_cpi.rs  flip_bit.rs  game_initialize.rs  game_refresh_signer.rs  initialize.rs  mod.rs  process_config_initialize.rs  process_config_update_authority.rs  process_flip_bit.rs  process_game_initialize.rs  process_game_reset_signers.rs  process_game_start.rs  process_game_update_temp_signer.rs  process_section_unlock.rs  process_token_group_initialize.rs  process_token_initialize.rs  token_group_initialize.rs  token_initialize.rs  token_member_initialize.rs  update_authority.rs
bitflip_program/src/snapshots/: bitflip_program__state__tests__token_price_calculation@first_flips.snap  bitflip_program__state__tests__token_price_calculation@first_flips_even_more_time.snap  bitflip_program__state__tests__token_price_calculation@first_flips_more_time.snap  bitflip_program__state__tests__token_price_calculation@first_flips_most_time.snap  bitflip_program__state__tests__token_price_calculation@flips_doubled.snap  bitflip_program__state__tests__token_price_calculation@max_flips.snap  bitflip_program__state__tests__token_price_calculation@no_flips.snap  bitflip_program__state__tests__token_price_calculation@no_flips_no_time.snap
bitflip_program/tests/: config_initialize_test.rs  config_update_authority_test.rs  flip_bit_test.rs  game_initialize_test.rs  game_refresh_signer_test.rs  game_update_temp_signer.rs  game_update_temp_signer_test.rs  initialize_test.rs  shared.rs  token_group_initialize_test.rs  token_initialize_test.rs  token_member_initialize_test.rs  update_authority_test.rs
bitflip_program/tests/snapshots/: config_initialize_test__config_initialize_test_validator.snap  flip_bit_test__flip_bit_test_validator.snap  flip_bit_test__shared_flip_bit_test-3.snap  game_initialize_test__shared_game_initialize_test.snap  game_refresh_signer_test__game_refresh_signer_test_validator.snap  game_refresh_signer_test__shared_game_refresh_signer_test.snap  game_update_temp_signer__shared_game_update_temp_signer_test.snap  game_update_temp_signer_test__shared_game_update_temp_signer_test.snap  initialize_test__initialize_config_test_validator.snap  token_group_initialize_test__shared_token_group_initialize_test-2.snap  token_group_initialize_test__shared_token_group_initialize_test-3.snap  token_group_initialize_test__shared_token_group_initialize_test-4.snap  token_group_initialize_test__token_group_initialize_test_validator.snap  token_initialize_test__shared_token_initialize_test@bit-2.snap  token_initialize_test__shared_token_initialize_test@bit.snap  token_initialize_test__shared_token_initialize_test@kibibit.snap  token_initialize_test__shared_token_initialize_test@mebibit-2.snap  token_initialize_test__token_initialize_test_validator@bit.snap  token_initialize_test__token_initialize_test_validator@mebibit.snap  token_member_initialize_test__shared_token_member_initialize_test@gibibit.snap  token_member_initialize_test__shared_token_member_initialize_test@kibibit-2.snap  token_member_initialize_test__shared_token_member_initialize_test@kibibit.snap  token_member_initialize_test__shared_token_member_initialize_test@mebibit.snap  token_member_initialize_test__token_member_initialize_test_validator@kibibit.snap  update_authority_test__update_authority_test_validator.snap
bitflip_program_tests/: Cargo.toml  compute_units.json
bitflip_program_tests/src/: lib.rs
bitflip_program_tests/tests/: config_initialize_test.rs  config_update_authority_test.rs  flip_bit_test.rs  game_initialize_test.rs  game_update_temp_signer_test.rs  token_group_initialize_test.rs  token_initialize_test.rs
bitflip_program_tests/tests/snapshots/: config_initialize_test__config_initialize_test_validator.snap  config_initialize_test__shared_config_initialize_test.snap  config_update_authority_test__config_update_authority_test_validator.snap  config_update_authority_test__shared_config_update_authority_test.snap  flip_bit_test__flip_bit_test_validator.snap  (+9 more)
(+40 files in other folders)
