[workspace]
members = ["bitflip", "bitflip_program", "bitflip_program_tests"]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
edition = "2021"
homepage = "https://bitflip.art"
license = "Apache-2.0"
repository = "https://github.com/ifiokjr/bitflip"
rust-version = "1.83.0"

[workspace.dependencies]
aes-gcm-siv = "0.11"
anyhow = "1"
argon2 = "0.5"
assert2 = "0.3"
assert_matches = "1"
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
bincode = "1"
bitflags = "2"
bs58 = "0.5"
bytemuck = "1"
cfg-if = "1"
check_keyword = "0.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"
codee = "0.2"
console_error_panic_hook = "0.1"
console_log = "1"
const_str_to_pubkey = "0.2"
crossbeam-channel = "0.5"
cuid2 = "0.1"
default-env = "0.1"
derive-where = "1"
derive_more = "1"
dom_testing_library = "0.1"
dotenvy = "0.15"
fake = "3"
fixed = "=1.28.0"
fixed_math = "0.4"
futures = "0.3"
futures-timeout = "0.1"
futures-timer = "3"
futures-util = "0.3"
gloo-console = "0.3"
gloo-events = "0.2"
gloo-net = "0.6"
gloo-storage = "0.3"
gloo-utils = "0.2"
heck = "0.5"
hmac = "0.12"
http = "1"
hyper = "1"
image = "0.25"
imagesize = "0.13"
indexmap = "2"
insta = "1"
js-sys = "0.3"
jsonwebtoken = "9"
lazy_static = "1"
leptos = "0.7"
leptos-use = "0.15"
leptos_axum = "0.7"
leptos_dom = "0.7"
leptos_meta = "0.7"
leptos_router = "0.7"
log = "0.4"
memory_wallet = "0.1"
mime_guess = "2"
num_enum = "0.7"
paste = "1"
port_check = "0.2"
rand = "0.8"
reactive_stores = "0.1"
regex = "1"
retrier = "0.1"
rstest = "0.23"
rust-embed = "8"
serde = "1"
serde-big-array = "0.5"
serde-wasm-bindgen = "0.6"
serde_json = "1"
serde_qs = "0.13"
serde_with = "3"
server_fn = "0.7"
sha2 = "0.10"
similar-asserts = "1"
simple_logger = "5"
solana-address-lookup-table-program = "=2.1"
solana-banks-client = "=2.1"
solana-banks-interface = "=2.1"
solana-client = "=2.1"
solana-config-program = "=2.1"
solana-faucet = "=2.1"
solana-package-metadata = "=2.1"
solana-program = "=2.1"
solana-program-runtime = "=2.1"
solana-program-test = "=2.1"
solana-rpc = "=2.1"
solana-sdk = "=2.1"
solana-security-txt = "1"
solana-streamer = "=2.1"
solana-test-validator = "=2.1"
solana-version = "=2.1"
spl-associated-token-account = "6"
spl-memo = "6"
spl-pod = "0.5"
spl-tlv-account-resolution = "0.9"
spl-token = "7"
spl-token-2022 = "6"
spl-token-group-interface = "0.5"
spl-token-metadata-interface = "0.6"
spl-transfer-hook-interface = "0.9"
spl-type-length-value = "0.7"
sqlx = "0.8"
static_assertions = "1"
steel = { git = "https://github.com/ifiokjr/steel", rev = "8c31249" }
strum = "0.26"
tailwind_fuse = "0.3"
test-log = "0.2"
test_utils_insta = "0.1"
test_utils_keypairs = "0.1"
test_utils_solana = "0.6"
thiserror = "2"
tiny-skia = "0.11"
tokio = "1"
tower = "0.5"
tower-http = "0.6"
tower_governor = "0.5"
tracing = "0.1"
typed-builder = "0.20"
uint = "0.10"
url = "2"
urlencoding = "2"
uuid = "1"
validator = { version = "0.19", features = ["derive"] }
wallet_standard = "0.4"
wallet_standard_browser = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
wasm_client_solana = "0.7"
web-sys = "0.3"
welds = "0.4"

# internal crates
bitflip_program = { path = "./bitflip_program", version = "0.0.0" }
bitflip_program_tests = { path = "./bitflip_program_tests", version = "0.0.0" }

[workspace.metadata.bin]
cargo-insta = { version = "1.41.1" }
cargo-leptos = { version = "0.2.24" }
cargo-llvm-cov = { version = "0.6.14" }
cargo-nextest = { version = "0.9.87" }
leptosfmt = { version = "0.1.32", bins = ["leptosfmt"] }
query-security-txt = { version = "1.1.1", bins = ["query-security-txt"] }
solana-verify = { version = "0.4.0", bins = ["solana-verify"] }
sqlx-cli = { version = "0.8.2", bins = ["sqlx"] }
welds-cli = { version = "0.4.2", bins = ["welds"] }

[workspace.metadata.solana]
tools-version = "1.43"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release.package.bitflip_legacy_program]
overflow-checks = true
codegen-units = 1
incremental = false

[profile.release.package.bitflip_program]
overflow-checks = true
codegen-units = 1
incremental = false

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.release]
lto = "fat"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[workspace.lints.rust]
# group
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

# individual
unsafe_code = "deny"
unstable_features = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
# group
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# individual
blocks_in_conditions = "allow"
cargo_common_metadata = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
expl_impl_clone_on_copy = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
no_effect_underscore_binding = "allow"
tabs-in-doc-comments = "allow"
too_many_lines = "allow"
wildcard_dependencies = "deny"
wildcard_imports = "allow"
