[package]
name = "bitflip_program"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "The bitflip program for on-chain deployment"

[lib]
crate-type = ["cdylib", "lib"]
name = "bitflip_program"

[dependencies]
bitflags = { workspace = true }
bytemuck = { workspace = true }
const_str_to_pubkey = { workspace = true }
default-env = { workspace = true }
derive_more = { workspace = true, features = ["add", "add_assign"] }
fixed = { workspace = true }
log = { workspace = true, optional = true }
num_enum = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde-big-array = { workspace = true }
serde_with = { workspace = true, optional = true }
solana-package-metadata = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true, optional = true }
solana-security-txt = { workspace = true }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
spl-pod = { workspace = true }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
spl-token-group-interface = { workspace = true }
spl-token-metadata-interface = { workspace = true }
spl-type-length-value = { workspace = true }
static_assertions = { workspace = true }
steel = { workspace = true, features = ["logs", "spl"] }
strum = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true }
typed-builder = { workspace = true, optional = true }
wasm_client_solana = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
assert2 = { workspace = true }
insta = { workspace = true, features = ["json", "redactions", "ron", "yaml"] }
rstest = { workspace = true }
serde_json = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"] }

[features]
no-entrypoint = []
serde = [
	"dep:serde_with",
	"dep:serde",
	"spl-pod/serde-traits",
]
client = [
	"dep:log",
	"dep:solana-sdk",
	"dep:strum",
	"dep:typed-builder",
	"dep:wasm_client_solana",
	"serde",
]
ssr = ["wasm_client_solana?/ssr"]
js = [
	"no-entrypoint",
	"wasm_client_solana?/js",
]

[package.metadata.solana]
program-id = "5AuNvfV9Xi9gskJpW2qQJndQkFcwbWNV6fjaf2VvuEcM"
